# adventofcode

./: CMakeLists.txt  README.md
2020/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2020/problems/: day1.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day3.txt  day4.txt  day6.txt  day7.txt  day8.txt  day9.txt
include/: common.h
